feat: implement video upload progress tracking with WebSocket notifications and enhance video metadata handling